#3479 [Feature Request] Adding support for Java JDK 11 (LTS) - Update build.sbt to support the JDK 11 and Jetty 10 and  javax.servlet-api 4.0.1